# mlnew

./: MANIFEST.in  README.md  SETUP_GUIDE.md  pyproject.toml
mlnew/: main.py
mlsetup/: main.py
tests/: test_cli.py  test_integration.py
vantix/: SETUP_GUIDE.md  main.py
