[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vantix"
version = "1.2.8"
description = "One command ML project scaffolding CLI — works on Windows, Mac, and Linux."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["machine-learning", "cli", "scaffold", "data-science", "project-template"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
vantix = "vantix.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vantix*"]

[tool.setuptools.package-data]
vantix = ["SETUP_GUIDE.md"]